@@ -1,3 +1,10 @@
+2010-01-03  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* src/Makefile.am,
+	src/betaradio.c,
+	src/gstplay.c,
+	src/streamplayer.h: Refactor for abstract stream player.
+
 2009-04-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* configure.ac,
